# bearing-condition-monitor

./: .gitignore  README.md  pyproject.toml
Results/: version1_results.md  version2_results.md
data/processed/: feature_table_16files.csv  feature_table_16files_balanced.csv  feature_table_4files.csv  held_out_load3_results_v2.csv  heldout_model_comparison.csv  leave_one_load_out_results.csv  leave_one_load_out_results_v2.csv  leave_one_load_out_summary_v2.csv  rf_feature_importance.csv
notebooks/: 01_dataset_exploration.ipynb
src/bcmonitor/: data_loader.py  datasets.py  evaluate.py  features.py  plotting.py  preprocessing.py  train.py
src/bcmonitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_loader.py  test_features.py  test_preprocessing.py  test_train.py
